<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context="br.com.example.bluetoothapp.BrConnectActivity">

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_br_habilitar"
        android:onClick="enableDisableBluetooth"/>

    <Button
        android:id="@+id/btn_enable_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="makeVisible"
        android:text="@string/text_br_habilitar_dispositivos" />

    <Button
        android:id="@+id/btn_show_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_br_dispositivos"
        android:onClick="showDevices"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_connection"
        android:onClick="startConnection"/>

    <ListView
        android:id="@+id/lv_devices"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/mensagem"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:onClick="sendMessage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:textStyle="bold"
            android:text="@string/status"/>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:text=""/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_get_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text=""/>

</LinearLayout>
